--- a/TestFreertos01.ioc
+++ b/TestFreertos01.ioc
@@ -49,7 +49,7 @@ FREERTOS.FootprintOK=true
 FREERTOS.IPParameters=Tasks01,FootprintOK,BinarySemaphores01,Mutexes01,Queues01
 FREERTOS.Mutexes01=MutexPrintf,Dynamic,NULL
 FREERTOS.Queues01=myQueue01,2,uint8_t,0,Dynamic,NULL,NULL
-FREERTOS.Tasks01=defaultTask,24,128,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL;myTaskLed,39,512,StartTaskLed,Default,NULL,Dynamic,NULL,NULL;LteTask,24,256,StartTaskLte,Default,NULL,Dynamic,NULL,NULL
+FREERTOS.Tasks01=defaultTask,24,128,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL;myTaskLed,39,512,StartTaskLed,Default,NULL,Dynamic,NULL,NULL;LteTask,24,256,StartTaskLte,Default,NULL,Dynamic,NULL,NULL;myTaskUsart3,15,128,StartTaskUsart3,Default,NULL,Dynamic,NULL,NULL
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
