--- a/TestFreertos01.ioc
+++ b/TestFreertos01.ioc
@@ -44,6 +44,16 @@ Dma.USART2_TX.3.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
 Dma.USART2_TX.3.PeriphInc=DMA_PINC_DISABLE
 Dma.USART2_TX.3.Priority=DMA_PRIORITY_LOW
 Dma.USART2_TX.3.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+FATFS.IPParameters=_CODE_PAGE,_USE_LFN,_VOLUMES,_MAX_SS,_FS_NORTC,_NORTC_MON,_NORTC_YEAR,_NORTC_MDAY,_USE_MUTEX
+FATFS._CODE_PAGE=936
+FATFS._FS_NORTC=1
+FATFS._MAX_SS=4096
+FATFS._NORTC_MDAY=1
+FATFS._NORTC_MON=7
+FATFS._NORTC_YEAR=2020
+FATFS._USE_LFN=2
+FATFS._USE_MUTEX=0
+FATFS._VOLUMES=1
 FREERTOS.BinarySemaphores01=usart1_dma_rxSem,Dynamic,NULL;usart1_dma_txSem,Dynamic,NULL;usart2_dma_rxSem,Dynamic,NULL;usart2_dma_txSem,Dynamic,NULL
 FREERTOS.FootprintOK=true
 FREERTOS.IPParameters=Tasks01,FootprintOK,BinarySemaphores01,Mutexes01,Queues01
@@ -55,33 +65,40 @@ GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
 Mcu.Family=STM32F4
 Mcu.IP0=DMA
-Mcu.IP1=FREERTOS
-Mcu.IP2=NVIC
-Mcu.IP3=RCC
-Mcu.IP4=SYS
-Mcu.IP5=USART1
-Mcu.IP6=USART2
-Mcu.IP7=USART3
-Mcu.IPNb=8
+Mcu.IP1=FATFS
+Mcu.IP2=FREERTOS
+Mcu.IP3=NVIC
+Mcu.IP4=RCC
+Mcu.IP5=SPI1
+Mcu.IP6=SYS
+Mcu.IP7=USART1
+Mcu.IP8=USART2
+Mcu.IP9=USART3
+Mcu.IPNb=10
 Mcu.Name=STM32F407V(E-G)Tx
 Mcu.Package=LQFP100
 Mcu.Pin0=PH0-OSC_IN
 Mcu.Pin1=PH1-OSC_OUT
-Mcu.Pin10=PA9
-Mcu.Pin11=PA10
-Mcu.Pin12=PA13
-Mcu.Pin13=PA14
-Mcu.Pin14=VP_FREERTOS_VS_CMSIS_V2
-Mcu.Pin15=VP_SYS_VS_tim7
+Mcu.Pin10=PB11
+Mcu.Pin11=PA9
+Mcu.Pin12=PA10
+Mcu.Pin13=PA13
+Mcu.Pin14=PA14
+Mcu.Pin15=PB3
+Mcu.Pin16=PB4
+Mcu.Pin17=PB5
+Mcu.Pin18=VP_FATFS_VS_Generic
+Mcu.Pin19=VP_FREERTOS_VS_CMSIS_V2
 Mcu.Pin2=PA2
+Mcu.Pin20=VP_SYS_VS_tim7
 Mcu.Pin3=PA3
 Mcu.Pin4=PA6
 Mcu.Pin5=PA7
 Mcu.Pin6=PC4
 Mcu.Pin7=PC5
-Mcu.Pin8=PB10
-Mcu.Pin9=PB11
-Mcu.PinsNb=16
+Mcu.Pin8=PB0
+Mcu.Pin9=PB10
+Mcu.PinsNb=21
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F407VETx
@@ -133,10 +150,23 @@ PA7.PinState=GPIO_PIN_SET
 PA7.Signal=GPIO_Output
 PA9.Mode=Asynchronous
 PA9.Signal=USART1_TX
+PB0.GPIOParameters=GPIO_Speed,PinState,GPIO_Label
+PB0.GPIO_Label=SPI1_CS
+PB0.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
+PB0.Locked=true
+PB0.PinState=GPIO_PIN_SET
+PB0.Signal=GPIO_Output
 PB10.Mode=Asynchronous
 PB10.Signal=USART3_TX
 PB11.Mode=Asynchronous
 PB11.Signal=USART3_RX
+PB3.Locked=true
+PB3.Mode=Full_Duplex_Master
+PB3.Signal=SPI1_SCK
+PB4.Mode=Full_Duplex_Master
+PB4.Signal=SPI1_MISO
+PB5.Mode=Full_Duplex_Master
+PB5.Signal=SPI1_MOSI
 PC4.GPIOParameters=GPIO_Speed,PinState,GPIO_Label,GPIO_ModeDefaultOutputPP
 PC4.GPIO_Label=EC20_RST_KEY
 PC4.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
@@ -181,7 +211,7 @@ ProjectManager.StackSize=0x800
 ProjectManager.TargetToolchain=MDK-ARM V5.27
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_USART1_UART_Init-USART1-false-HAL-true,5-MX_USART2_UART_Init-USART2-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_USART1_UART_Init-USART1-false-HAL-true,5-MX_USART2_UART_Init-USART2-false-HAL-true,6-MX_USART3_UART_Init-USART3-false-HAL-true
 RCC.48MHZClocksFreq_Value=84000000
 RCC.AHBFreq_Value=168000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
@@ -214,12 +244,22 @@ RCC.VCOI2SOutputFreq_Value=384000000
 RCC.VCOInputFreq_Value=2000000
 RCC.VCOOutputFreq_Value=336000000
 RCC.VcooutputI2S=192000000
+SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_4
+SPI1.CLKPhase=SPI_PHASE_2EDGE
+SPI1.CLKPolarity=SPI_POLARITY_HIGH
+SPI1.CalculateBaudRate=21.0 MBits/s
+SPI1.Direction=SPI_DIRECTION_2LINES
+SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler,CLKPolarity,CLKPhase
+SPI1.Mode=SPI_MODE_MASTER
+SPI1.VirtualType=VM_MASTER
 USART1.IPParameters=VirtualMode
 USART1.VirtualMode=VM_ASYNC
 USART2.IPParameters=VirtualMode
 USART2.VirtualMode=VM_ASYNC
 USART3.IPParameters=VirtualMode
 USART3.VirtualMode=VM_ASYNC
+VP_FATFS_VS_Generic.Mode=User_defined
+VP_FATFS_VS_Generic.Signal=FATFS_VS_Generic
 VP_FREERTOS_VS_CMSIS_V2.Mode=CMSIS_V2
 VP_FREERTOS_VS_CMSIS_V2.Signal=FREERTOS_VS_CMSIS_V2
 VP_SYS_VS_tim7.Mode=TIM7
