--- a/TestFreertos01.ioc
+++ b/TestFreertos01.ioc
@@ -80,13 +80,13 @@ Mcu.Package=LQFP100
 Mcu.Pin0=PH0-OSC_IN
 Mcu.Pin1=PH1-OSC_OUT
 Mcu.Pin10=PB11
-Mcu.Pin11=PA9
-Mcu.Pin12=PA10
-Mcu.Pin13=PA13
-Mcu.Pin14=PA14
-Mcu.Pin15=PB3
-Mcu.Pin16=PB4
-Mcu.Pin17=PB5
+Mcu.Pin11=PA13
+Mcu.Pin12=PA14
+Mcu.Pin13=PB3
+Mcu.Pin14=PB4
+Mcu.Pin15=PB5
+Mcu.Pin16=PB6
+Mcu.Pin17=PB7
 Mcu.Pin18=VP_FATFS_VS_Generic
 Mcu.Pin19=VP_FREERTOS_VS_CMSIS_V2
 Mcu.Pin2=PA2
@@ -125,8 +125,6 @@ NVIC.USART1_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
 NVIC.USART2_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
 NVIC.USART3_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-PA10.Mode=Asynchronous
-PA10.Signal=USART1_RX
 PA13.Mode=Serial_Wire
 PA13.Signal=SYS_JTMS-SWDIO
 PA14.Mode=Serial_Wire
@@ -148,8 +146,6 @@ PA7.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PA7.Locked=true
 PA7.PinState=GPIO_PIN_SET
 PA7.Signal=GPIO_Output
-PA9.Mode=Asynchronous
-PA9.Signal=USART1_TX
 PB0.GPIOParameters=GPIO_Speed,PinState,GPIO_Label
 PB0.GPIO_Label=SPI1_CS
 PB0.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
@@ -167,6 +163,12 @@ PB4.Mode=Full_Duplex_Master
 PB4.Signal=SPI1_MISO
 PB5.Mode=Full_Duplex_Master
 PB5.Signal=SPI1_MOSI
+PB6.Locked=true
+PB6.Mode=Asynchronous
+PB6.Signal=USART1_TX
+PB7.Locked=true
+PB7.Mode=Asynchronous
+PB7.Signal=USART1_RX
 PC4.GPIOParameters=GPIO_Speed,PinState,GPIO_Label,GPIO_ModeDefaultOutputPP
 PC4.GPIO_Label=EC20_RST_KEY
 PC4.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
